--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,6 @@
 @import 'remixicon/fonts/remixicon.css';
 
 body {
-    color: #393e46;
+    color: #222222;
     font-family: "Lexend", sans-serif;
 }
